# EmbeddingAdapters

./: .env  .gitignore  AUTHORS  CNAME  EmbeddingAdaptersExamples.ipynb  LICENSE  README.md  benchmarks.html  commercial.html  how.html  index.html  learn-more.html  pyproject.toml  requirements.txt  usecases.html
.github/workflows/: publish.yml
embedding_adapters/: api.py  auth.py  cli.py  loader.py  quality.py
embedding_adapters/data/: registry.json
embedding_adapters/utils/: decrypt_helper.py  version_helper.py
examples/: basic_usage.py  gemini_to_openai_embeddings.py  mnnl_to_openai_embeddings.py  openai_to_gemini_embeddings.py  scoring_example.py  use_existing_embeddings.py
notebooks/: EmbeddingAdaptersQuickstart.ipynb
tests/: test_login.py
