[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "embedding-adapters"
version = "0.0.1"
description = "Universal embedding-space translation. Neural adapters that map one model's embeddings to another."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Your Name" }
]
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.23.0"
]

[project.urls]
"Homepage" = "https://github.com/your-username/embedding-adapters"
"Source" = "https://github.com/your-username/embedding-adapters"
