[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "embedding-adapters"
version = "0.0.1"
description = "Universal embedding-space translation. Neural adapters that map one model's embeddings to another."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Tyler Friddle" }
]
dependencies = [
    "torch==2.1.0",
    "numpy==1.26.4",
    "cryptography>=43,<44",
    "huggingface_hub>=0.24,<0.30",
    "transformers>=4.31.0,<5.0.0",
    "python-dotenv>=1.0.0"
]

[project.urls]
"Homepage" = "https://github.com/PotentiallyARobot/EmbeddingAdapters"
"Source"   = "https://github.com/PotentiallyARobot/EmbeddingAdapters"

[tool.setuptools]
# Top-level layout: package code is directly under the repo root
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["embedding_adapters*"]
